<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.pizzaapp.MainActivity">

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:inputType="textCapWords"
            android:textSize="25sp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <TextView
            style="@style/HeaderTextStyle"
            android:textColor="@color/darkBlue"
            android:text="@string/toppings"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/pepperoni_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:textColor="@color/aqua"
            android:paddingLeft="24dp"
            android:text="@string/pepperoni"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/onions_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:textColor="@color/aqua"
            android:paddingLeft="24dp"
            android:text="@string/onions"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/green_bell_peppers_checked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/aqua"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/greenbellpepper"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:textSize="25sp"
            android:text="@string/quantity"
            android:textColor="@color/darkBlue"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="#000000" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/orderButton"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@color/darkBlue"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginRight="8dp"
            />

        <Button
            android:id="@+id/summaryButton"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:background="@color/darkBlue"
            android:text="@string/summary"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>