<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.pizzaapp.MainActivity">

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/order_summary_title"
            android:textSize="25sp"
            android:textColor="@color/darkBlue"/>

        <TextView
            android:id="@+id/summaryMessage"
            style="@style/HeaderTextStyle"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/aqua"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:textStyle="italic"
            android:text="@string/order_prices_message"
            android:textSize="10sp"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/go_back_button"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:background="@color/darkBlue"
                android:textColor="@android:color/white"
                android:text="@string/go_back" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>